# bk7252-cam

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  README.md  backup.sh  dependencies.cmake  emu.sh  flash.sh  smoke_build.sh  test_build.sh  toolchain.cmake
src/: CMakeLists.txt  linker.ld  linker.lds  main.cpp
src/applications/: CMakeLists.txt
src/applications/blink/: CMakeLists.txt  blink.cpp  main.cpp
src/applications/bootloader/: CMakeLists.txt  main.cpp  partition_table.c  shell_handlers.cpp  shell_handlers.h
src/applications/bootloader_installer/: CMakeLists.txt  bootloader_payload.S.in  main.cpp
src/applications/console/: CMakeLists.txt  console.cpp
src/applications/debug/: CMakeLists.txt  main.cpp
src/applications/debug/console/: CMakeLists.txt  Console.cpp  Console.h  History.cpp  handlers.cpp  handlers.h
src/applications/freertos_example/: CMakeLists.txt  FreeRTOSConfig.h  main.c
src/applications/freertos_shell/: CMakeLists.txt  main.cpp  shell_handlers.cpp  shell_handlers.h  shell_task.cpp
src/applications/freertos_shell/commands/: free.cpp  freertos.cpp  i2c.cpp  ram_test.cpp  security.cpp  task_blink.cpp  temp.cpp  test_net.cpp
src/applications/freertos_shell/config/: FreeRTOSConfig.h
src/applications/hello/: CMakeLists.txt  blink.cpp  hello.cpp  main.cpp
src/applications/ram_loader/: CMakeLists.txt  main.cpp  shell_handlers.cpp  shell_handlers.h
src/applications/random_test/: CMakeLists.txt
src/applications/shell/: CMakeLists.txt  handlers.cpp  handlers.h  main.cpp  shell_handlers.cpp
src/applications/shell/commands/: commands.h  cpu_test.cpp  debug.cpp  examples.cpp  gpio_test.cpp  irq_test.cpp  regs.cpp  stack.cpp  time_test.cpp  timers_test.cpp  watch.cpp
src/applications/test_security/: CMakeLists.txt  helpers.c  helpers.h  main.cpp  test_aes.cpp  validate.py
src/boards/: A9_B_V1_3.h  CMakeLists.txt
src/boards/A9_B_V1_3/: board.h
src/boards/include/: board.h
src/drivers/: CMakeLists.txt  arch.h  uart.c
src/entry/: CMakeLists.txt
src/linker/: bootloader.lds  flash.lds  iram.lds
src/platform/: CMakeLists.txt
src/platform/boot/: CMakeLists.txt  boot.h  boot_init.c  boot_reset.S  boot_vectors.S  boot_vectors.s  cpu.S
src/platform/cpu/: CMakeLists.txt  cpu.S
src/platform/drivers/: CMakeLists.txt  arch.h  chip_id.c  gpio.c  time.c  wdt.c
src/platform/drivers/common/: CMakeLists.txt  chip_id.c
src/platform/drivers/common_defs/: CMakeLists.txt
src/platform/drivers/hardware_efuse/: CMakeLists.txt  efuse.c  efuse_regs.h
src/platform/drivers/hardware_fft/: fft_regs.h
src/platform/drivers/hardware_flash/: CMakeLists.txt  flash.c  flash_bypass.c  flash_bypass_regs.h  flash_regs.h
src/platform/drivers/hardware_gdma/: CMakeLists.txt  gdma.c  gdma_regs.h
src/platform/drivers/hardware_gpio/: CMakeLists.txt  gpio.c  gpio_regs.h
src/platform/drivers/hardware_i2c/: CMakeLists.txt  i2c1_async.c  i2c1_dummy.c  i2c1_sync.c  i2c_regs.h
src/platform/drivers/hardware_icu/: CMakeLists.txt  icu.c
src/platform/drivers/hardware_intc/: CMakeLists.txt  arm_asm.S  bk_trap.c  int_handlers.c  int_handlers.h  intc.c  intc_manager.h  intc_regs.h
src/platform/drivers/hardware_jpeg/: CMakeLists.txt  jpeg.c  jpeg_encoder_regs.h  jpeg_regs.h
src/platform/drivers/hardware_mpb/: mpb_regs.h
src/platform/drivers/hardware_pwm/: CMakeLists.txt  pwm.c
src/platform/drivers/hardware_random/: CMakeLists.txt  random.c  random_regs.h
src/platform/drivers/hardware_rc/: rc_regs.h
src/platform/drivers/hardware_saradc/: saradc_regs.h
src/platform/drivers/hardware_sctrl/: CMakeLists.txt  sctrl.c  sctrl_regs.h
src/platform/drivers/hardware_security/: CMakeLists.txt  README.md  aes.c  regs.h  rsa.c  security_regs.h  sha.c
src/platform/drivers/hardware_time/: CMakeLists.txt  time.c
src/platform/drivers/hardware_timer/: CMakeLists.txt  sys_counter.c  sys_counter.h  timer.c  timer_regs.h
src/platform/drivers/hardware_uart/: CMakeLists.txt  uart.c  uart_regs.h
src/platform/drivers/hardware_wdt/: CMakeLists.txt  wdt.c
src/platform/entry/: CMakeLists.txt  arch_main.c  boot_reset.S
src/platform/freertos/: CMakeLists.txt  crt.cpp  entry.c  heap.c  heap5_init.c  newlib_adapter.c  newlib_heap5.c  port.c  port_asm.S  portmacro.inc  rtos.c  sbrk.c  stats.c
src/platform/freertos/config/: FreeRTOSConfig.h
src/platform/freertos/include/: portmacro.h  rtos.h
src/platform/nosys/: CMakeLists.txt  arch_main.c  boot_handlers.S  boot_handlers.h  entry.c  portmacro.inc  sbrk.c
src/platform/panic/: CMakeLists.txt  panic.c
src/platform/port/: CMakeLists.txt  port_asm.S
src/platform/port_heap_tlsf/: CMakeLists.txt  heap_freertos.c  heap_nosys.c
src/platform/port_heap_tlsf/include/: heap.h
src/platform/port_lwip/: CMakeLists.txt  net.c
src/platform/port_lwip/config/: lwipopts.h
src/platform/port_lwip/include/: net.h
src/platform/port_newlib/: CMakeLists.txt  crt.c  sbrk.c  syscalls.c
src/platform/port_newlib/include/: heap.h
src/platform/port_tlsf/: CMakeLists.txt  freertos_adapter.c  heap_init.c  tlsf_global.h
src/platform/soc/: CMakeLists.txt
src/platform/stdio/: CMakeLists.txt  stdio.c
src/platform/stdio/include/: debug.h
src/shell/: CMakeLists.txt
src/shell/shell_commands_beken/: CMakeLists.txt
src/shell/shell_commands_iram/: CMakeLists.txt
src/shell/shell_main/: CMakeLists.txt  Console.cpp  History.cpp  Parser.cpp  Shell.cpp  Table.cpp
src/tests/: CMakeLists.txt
src/tests/gdma/: CMakeLists.txt  test_gdma.cpp
src/tests/probe/: CMakeLists.txt  probe.cpp  probe_arm.S
src/tests/random/: CMakeLists.txt  test_random.cpp
src/tests/security/: CMakeLists.txt  helpers.c  helpers.h  main.cpp  test_aes.cpp  test_security.cpp  test_sha.cpp  validate_aes.py
src/utils/: CMakeLists.txt  panic.c  sleep.c
src/utils/busy_wait/: CMakeLists.txt  busy_wait.c
src/utils/crc/: CMakeLists.txt  crc16.c  crc32.c  crc8.c
src/utils/include/utils/: assert.h  (+4 more)
src/utils/shell/: CMakeLists.txt  Console.cpp
src/utils/shell_commands/: CMakeLists.txt
(+175 files in other folders)
