function(simple_drivers_library NAME)
    add_library(${NAME} INTERFACE)
    target_include_directories(${NAME} INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
    target_link_libraries(${NAME} INTERFACE platform_soc)
endfunction()

add_subdirectory(hardware_icu)
add_subdirectory(hardware_wdt)
add_subdirectory(hardware_gpio)
add_subdirectory(hardware_uart)
add_subdirectory(hardware_intc)
add_subdirectory(hardware_sctrl)
add_subdirectory(hardware_timer)
add_subdirectory(hardware_efuse)
add_subdirectory(hardware_flash)
add_subdirectory(hardware_random)
add_subdirectory(hardware_time)
add_subdirectory(hardware_security)
add_subdirectory(hardware_gdma)
add_subdirectory(hardware_jpeg)

